Changed the css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="content">
             <h1>Michał Mikołajczyk</h1>
-            <span class="lead">Marketing Consultant</span>
+            <span class="lead">Helpdesk Technician | IT Specialist | Database Administrator (DBA)</span>
 
             <div class="about-text">
                 <p>
